메인수정, 비지니스 페이지 작업

--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,181 @@
 @import url(fonts.css);
 @import url(reset.css);
+.mt0 { margin-top: 0px !important; }
+
+.mb0 { margin-top: 0px !important; }
+
+.ml0 { margin-top: 0px !important; }
+
+.mr0 { margin-top: 0px !important; }
+
+.pt0 { margin-top: 0px !important; }
+
+.pb0 { margin-top: 0px !important; }
+
+.pl0 { margin-top: 0px !important; }
+
+.pr0 { margin-top: 0px !important; }
+
+.mt1 { margin-top: 1px !important; }
+
+.mb1 { margin-top: 1px !important; }
+
+.ml1 { margin-top: 1px !important; }
+
+.mr1 { margin-top: 1px !important; }
+
+.pt1 { margin-top: 1px !important; }
+
+.pb1 { margin-top: 1px !important; }
+
+.pl1 { margin-top: 1px !important; }
+
+.pr1 { margin-top: 1px !important; }
+
+.mt2 { margin-top: 2px !important; }
+
+.mb2 { margin-top: 2px !important; }
+
+.ml2 { margin-top: 2px !important; }
+
+.mr2 { margin-top: 2px !important; }
+
+.pt2 { margin-top: 2px !important; }
+
+.pb2 { margin-top: 2px !important; }
+
+.pl2 { margin-top: 2px !important; }
+
+.pr2 { margin-top: 2px !important; }
+
+.mt3 { margin-top: 3px !important; }
+
+.mb3 { margin-top: 3px !important; }
+
+.ml3 { margin-top: 3px !important; }
+
+.mr3 { margin-top: 3px !important; }
+
+.pt3 { margin-top: 3px !important; }
+
+.pb3 { margin-top: 3px !important; }
+
+.pl3 { margin-top: 3px !important; }
+
+.pr3 { margin-top: 3px !important; }
+
+.mt4 { margin-top: 4px !important; }
+
+.mb4 { margin-top: 4px !important; }
+
+.ml4 { margin-top: 4px !important; }
+
+.mr4 { margin-top: 4px !important; }
+
+.pt4 { margin-top: 4px !important; }
+
+.pb4 { margin-top: 4px !important; }
+
+.pl4 { margin-top: 4px !important; }
+
+.pr4 { margin-top: 4px !important; }
+
+.mt5 { margin-top: 5px !important; }
+
+.mb5 { margin-top: 5px !important; }
+
+.ml5 { margin-top: 5px !important; }
+
+.mr5 { margin-top: 5px !important; }
+
+.pt5 { margin-top: 5px !important; }
+
+.pb5 { margin-top: 5px !important; }
+
+.pl5 { margin-top: 5px !important; }
+
+.pr5 { margin-top: 5px !important; }
+
+.mt6 { margin-top: 6px !important; }
+
+.mb6 { margin-top: 6px !important; }
+
+.ml6 { margin-top: 6px !important; }
+
+.mr6 { margin-top: 6px !important; }
+
+.pt6 { margin-top: 6px !important; }
+
+.pb6 { margin-top: 6px !important; }
+
+.pl6 { margin-top: 6px !important; }
+
+.pr6 { margin-top: 6px !important; }
+
+.mt7 { margin-top: 7px !important; }
+
+.mb7 { margin-top: 7px !important; }
+
+.ml7 { margin-top: 7px !important; }
+
+.mr7 { margin-top: 7px !important; }
+
+.pt7 { margin-top: 7px !important; }
+
+.pb7 { margin-top: 7px !important; }
+
+.pl7 { margin-top: 7px !important; }
+
+.pr7 { margin-top: 7px !important; }
+
+.mt8 { margin-top: 8px !important; }
+
+.mb8 { margin-top: 8px !important; }
+
+.ml8 { margin-top: 8px !important; }
+
+.mr8 { margin-top: 8px !important; }
+
+.pt8 { margin-top: 8px !important; }
+
+.pb8 { margin-top: 8px !important; }
+
+.pl8 { margin-top: 8px !important; }
+
+.pr8 { margin-top: 8px !important; }
+
+.mt9 { margin-top: 9px !important; }
+
+.mb9 { margin-top: 9px !important; }
+
+.ml9 { margin-top: 9px !important; }
+
+.mr9 { margin-top: 9px !important; }
+
+.pt9 { margin-top: 9px !important; }
+
+.pb9 { margin-top: 9px !important; }
+
+.pl9 { margin-top: 9px !important; }
+
+.pr9 { margin-top: 9px !important; }
+
+.mt10 { margin-top: 10px !important; }
+
+.mb10 { margin-top: 10px !important; }
+
+.ml10 { margin-top: 10px !important; }
+
+.mr10 { margin-top: 10px !important; }
+
+.pt10 { margin-top: 10px !important; }
+
+.pb10 { margin-top: 10px !important; }
+
+.pl10 { margin-top: 10px !important; }
+
+.pr10 { margin-top: 10px !important; }
+
 .m_only { display: none; }
 
 .taC { text-align: center; }
@@ -264,11 +440,13 @@ img { max-width: 100%; }
 /* company */
 .about_cont { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
 
-.about_cont .img_box { padding-left: 4%; }
+.about_cont .img_box { padding-left: 4%; text-align: center; }
 
 .about_cont .img_box img { max-width: 100%; margin-top: -20px; }
 
 .about_cont .slogan { display: block; font-size: 24px; line-height: 1.42; letter-spacing: -0.72px; margin-bottom: 24px; color: #2f91e8; }
+
+.about_cont .txt_box_tit { display: block; font-size: 24px; line-height: 1.42; letter-spacing: -0.72px; margin-bottom: 12px; color: #2f91e8; }
 
 .sub_txt { font-size: 18px; line-height: 27px; font-weight: 500; letter-spacing: -0.54px; }
 
@@ -345,6 +523,28 @@ img { max-width: 100%; }
 
 .map_info ul li + li { margin-top: 6px; }
 
+.sub_business_list { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; margin: 0 -15px; margin-top: -30px; }
+
+.sub_business_item { -webkit-box-sizing: border-box; box-sizing: border-box; width: 50%; padding: 0 15px; margin-top: 30px; }
+
+.sub_business_item .cont_box { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; background-color: #fff; height: 100%; padding: 40px; -webkit-box-sizing: border-box; box-sizing: border-box; -webkit-box-shadow: 0 6px 40px 0 rgba(1, 31, 64, 0.08); box-shadow: 0 6px 40px 0 rgba(1, 31, 64, 0.08); }
+
+.sub_business_item .img_box { width: 100px; -ms-flex-negative: 0; flex-shrink: 0; }
+
+.sub_business_item .txt_box { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; padding-left: 40px; }
+
+.sub_business_item .txt_box .tit_box { margin-bottom: 16px; }
+
+.sub_business_item .txt_box .tit_box .num { display: block; font-size: 18px; font-family: play; line-height: 21px; color: #2f91e8; margin-bottom: 4px; }
+
+.sub_business_item .txt_box .tit_box .tit { font-size: 24px; line-height: 36px; letter-spacing: -0.72px; }
+
+.sub_business_item .txt_box .list li { font-size: 16px; line-height: 24px; padding-left: 10px; position: relative; letter-spacing: -0.48px; }
+
+.sub_business_item .txt_box .list li::before { content: ''; position: absolute; width: 4px; height: 4px; background-color: #2f91e8; left: 0; top: 10px; }
+
+.sub_business_item .txt_box .list li + li { margin-top: 4px; }
+
 @media (max-width: 1024px) { .header { padding: 0 30px; }
   .header .nav_btn { display: block; width: 22px; height: 21px; position: absolute; right: 0; top: 50%; padding: 0; margin-top: -10.5px; z-index: 9999; }
   .header .nav_btn_item { position: absolute; right: 0; height: 3px; width: 100%; background-color: #222; -webkit-transition: all .4s ease-in-out; transition: all .4s ease-in-out; }
@@ -375,7 +575,10 @@ img { max-width: 100%; }
   .year_item button span { z-index: 10; }
   .year_wrap::after { bottom: 1px; }
   .sub_sec_history .txt_img { bottom: -4.8vw; left: 30%; }
-  .sub_sec_history .txt_img img { max-width: 100%; } }
+  .sub_sec_history .txt_img img { max-width: 100%; }
+  .sub_business_list { display: block; margin: 0; margin-top: 0; }
+  .sub_business_item { width: 100%; padding: 0; margin-top: 0; }
+  .sub_business_item + .sub_business_item { margin-top: 30px; } }
 
 @media (max-width: 767px) { .m_only { display: block !important; }
   .pc_only { display: none; }
@@ -456,7 +659,9 @@ img { max-width: 100%; }
   .about_cont { display: block; }
   .about_cont .txt_box { width: 100%; }
   .about_cont .slogan { font-size: 18px; line-height: 26px; margin-bottom: 20px; letter-spacing: -0.54px; }
+  .about_cont .txt_box_tit { font-size: 18px; line-height: 26px; margin-bottom: 12px; letter-spacing: -0.54px; }
   .about_cont .img_box { width: 100%; -webkit-box-sizing: border-box; box-sizing: border-box; text-align: center; padding: 0 12%; margin-top: 30px; }
+  .about_cont.ty_business .img_box { padding: 0 20%; margin-top: 48px; }
   .about_cont .img_box img { margin-top: 0; }
   .sub_txt { font-size: 14px; line-height: 24px; letter-spacing: -0.42px; }
   .year_item button { padding: 0 20px; font-size: 18px; line-height: 21px; }
@@ -476,4 +681,15 @@ img { max-width: 100%; }
   .map_info_tit { font-size: 18px; line-height: 27px; padding-left: 18px; margin-bottom: 8px; }
   .map_info_tit i img { height: 16px; }
   .map_info ul li { font-size: 14px; line-height: 20px; }
-  .map_info ul li + li { margin-top: 4px; } }
+  .map_info ul li + li { margin-top: 4px; }
+  .sub_business_item + .sub_business_item { margin-top: 16px; }
+  .sub_business_item .cont_box { display: block; padding: 32px; }
+  .sub_business_item .img_box { width: 100%; text-align: center; }
+  .sub_business_item .img_box img { width: 80px; }
+  .sub_business_item .txt_box { margin-top: 24px; padding-left: 0; text-align: center; }
+  .sub_business_item .txt_box .tit_box { margin-bottom: 12px; }
+  .sub_business_item .txt_box .tit_box .num { font-size: 14px; line-height: 16px; }
+  .sub_business_item .txt_box .tit_box .tit { font-size: 18px; line-height: 27px; }
+  .sub_business_item .txt_box .list { display: inline-block; text-align: left; }
+  .sub_business_item .txt_box .list li { font-size: 13px; line-height: 19px; }
+  .sub_business_item .txt_box .list li::before { width: 3px; height: 3px; top: 8px; } }
