--- a/css/common.css
+++ b/css/common.css
@@ -448,6 +448,12 @@ img { max-width: 100%; }
 
 .about_cont .txt_box_tit { display: block; font-size: 24px; line-height: 1.42; letter-spacing: -0.72px; margin-bottom: 12px; color: #2f91e8; }
 
+.about_cont.ty_solution { -webkit-box-orient: horizontal; -webkit-box-direction: reverse; -ms-flex-direction: row-reverse; flex-direction: row-reverse; }
+
+.about_cont.ty_solution .txt_box { width: auto; -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
+
+.about_cont.ty_solution .img_box { width: 204px; -webkit-box-sizing: border-box; box-sizing: border-box; -ms-flex-negative: 0; flex-shrink: 0; text-align: right; }
+
 .sub_txt { font-size: 18px; line-height: 27px; font-weight: 500; letter-spacing: -0.54px; }
 
 .year_wrap { overflow: hidden; padding: 0 40px; position: relative; line-height: 0; }
@@ -545,6 +551,44 @@ img { max-width: 100%; }
 
 .sub_business_item .txt_box .list li + li { margin-top: 4px; }
 
+.solution_desc { display: -webkit-box; display: -ms-flexbox; display: flex; margin: 0 -15px; margin-top: 64px; }
+
+.solution_desc_item { width: 50%; padding: 0 15px; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+.solution_desc_item .inner_box { height: 100%; border: 1px solid #ddd; padding: 36px 40px; -webkit-box-sizing: border-box; box-sizing: border-box; position: relative; }
+
+.solution_desc_item .inner_box::before { content: ''; position: absolute; width: 40px; height: 3px; background-color: #2f91e8; left: 40px; top: -1px; }
+
+.solution_desc_item .inner_box h3 { font-size: 24px; line-height: 36px; letter-spacing: -0.72px; margin-bottom: 24px; }
+
+.solution_desc_item .inner_box .list_wrap { display: -webkit-box; display: -ms-flexbox; display: flex; }
+
+.solution_desc_item .inner_box ul { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; -ms-flex-negative: 0; flex-shrink: 0; display: inline-block; vertical-align: top; }
+
+.solution_desc_item .inner_box ul + ul { margin-left: 40px; }
+
+.solution_desc_item .inner_box ul li { position: relative; padding-left: 10px; font-size: 16px; line-height: 24px; margin-top: 4px; }
+
+.solution_desc_item .inner_box ul li::before { content: ''; position: absolute; width: 4px; height: 4px; background-color: #2f91e8; left: 0; top: 10px; }
+
+.works_list { margin: 0 -15px; margin-top: -60px; font-size: 0; }
+
+.works_list_item { width: 33.3333%; padding: 0 15px; margin-top: 60px; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; vertical-align: top; }
+
+.works_list_item .img_box img { width: 100%; }
+
+.works_list_item .txt_box { padding-top: 24px; text-align: center; }
+
+.works_list_item .txt_box .icons { margin-bottom: 16px; }
+
+.works_list_item .txt_box .icons > * { margin: 0 4px; }
+
+.works_list_item .txt_box .tit { display: block; font-size: 24px; line-height: 36px; letter-spacing: -0.72px; }
+
+.works_list_item .txt_box .desc { font-size: 16px; line-height: 22px; letter-spacing: -0.48px; color: #919191; margin-top: 4px; }
+
+.works_list_item .txt_box .tags { font-size: 16px; line-height: 24px; letter-spacing: -0.48px; margin-top: 16px; }
+
 @media (max-width: 1024px) { .header { padding: 0 30px; }
   .header .nav_btn { display: block; width: 22px; height: 21px; position: absolute; right: 0; top: 50%; padding: 0; margin-top: -10.5px; z-index: 9999; }
   .header .nav_btn_item { position: absolute; right: 0; height: 3px; width: 100%; background-color: #222; -webkit-transition: all .4s ease-in-out; transition: all .4s ease-in-out; }
@@ -579,6 +623,8 @@ img { max-width: 100%; }
   .sub_business_list { display: block; margin: 0; margin-top: 0; }
   .sub_business_item { width: 100%; padding: 0; margin-top: 0; }
   .sub_business_item + .sub_business_item { margin-top: 30px; } }
+
+@media (max-width: 860px) { .works_list_item { width: 50%; } }
 
 @media (max-width: 767px) { .m_only { display: block !important; }
   .pc_only { display: none; }
@@ -654,6 +700,7 @@ img { max-width: 100%; }
   .sub_sec_tit { margin-bottom: 32px; }
   .sub_sec_tit h2 { font-size: 28px; line-height: 41px; }
   .sv_wrap { height: 156px; }
+  .sv_wrap .txt_box { padding: 0 16px; width: 100%; -webkit-box-sizing: border-box; box-sizing: border-box; }
   .sv_wrap .txt_box h2 { font-size: 28px; line-height: 32px; }
   .sv_wrap .txt_box p { font-size: 14px; line-height: 20px; margin-top: 8px; }
   .about_cont { display: block; }
@@ -663,6 +710,8 @@ img { max-width: 100%; }
   .about_cont .img_box { width: 100%; -webkit-box-sizing: border-box; box-sizing: border-box; text-align: center; padding: 0 12%; margin-top: 30px; }
   .about_cont.ty_business .img_box { padding: 0 20%; margin-top: 48px; }
   .about_cont .img_box img { margin-top: 0; }
+  .about_cont.ty_solution .img_box { padding: 0; width: 100%; text-align: center; margin-top: 0; margin-bottom: 24px; }
+  .about_cont.ty_solution .img_box img { width: 80px; }
   .sub_txt { font-size: 14px; line-height: 24px; letter-spacing: -0.42px; }
   .year_item button { padding: 0 20px; font-size: 18px; line-height: 21px; }
   .year_item button span { padding-bottom: 20px; }
@@ -692,4 +741,21 @@ img { max-width: 100%; }
   .sub_business_item .txt_box .tit_box .tit { font-size: 18px; line-height: 27px; }
   .sub_business_item .txt_box .list { display: inline-block; text-align: left; }
   .sub_business_item .txt_box .list li { font-size: 13px; line-height: 19px; }
-  .sub_business_item .txt_box .list li::before { width: 3px; height: 3px; top: 8px; } }
+  .sub_business_item .txt_box .list li::before { width: 3px; height: 3px; top: 8px; }
+  .solution_desc { display: block; margin: 0; margin-top: 32px; }
+  .solution_desc_item { width: 100%; padding: 0; }
+  .solution_desc_item + .solution_desc_item { margin-top: 16px; }
+  .solution_desc_item .inner_box { padding: 26px 16px; }
+  .solution_desc_item .inner_box::before { width: 24px; height: 2px; left: 16px; }
+  .solution_desc_item .inner_box h3 { font-size: 18px; line-height: 27px; letter-spacing: -0.54px; margin-bottom: 12px; }
+  .solution_desc_item .inner_box ul + ul { margin-left: 0; }
+  .solution_desc_item .inner_box ul li { font-size: 13px; line-height: 19px; letter-spacing: -0.39px; margin-top: 0; padding-left: 9px; }
+  .solution_desc_item .inner_box ul li::before { top: 8px; width: 3px; height: 3px; }
+  .works_list { margin: 0; }
+  .works_list_item { width: 100%; padding: 0; margin-top: 0; }
+  .works_list_item + .works_list_item { margin-top: 32px; }
+  .works_list_item .txt_box { padding-top: 20px; }
+  .works_list_item .txt_box .icons { margin-bottom: 12px; }
+  .works_list_item .txt_box .tit { font-size: 20px; line-height: 29px; letter-spacing: -0.6px; }
+  .works_list_item .txt_box .desc { font-size: 13px; line-height: 19px; letter-spacing: -0.39px; margin-top: 2px; }
+  .works_list_item .txt_box .tags { font-size: 13px; line-height: 19px; letter-spacing: -0.39px; margin-top: 12px; } }
