서브페이지

--- a/css/common.scss
+++ b/css/common.scss
@@ -1164,6 +1164,7 @@ img {
             padding: 36px 40px;
             box-sizing: border-box;
             position: relative;
+            background-color: #fff;
             &::before {
                 content:'';
                 position: absolute;
