--- a/css/common.css
+++ b/css/common.css
@@ -555,7 +555,7 @@ img { max-width: 100%; }
 
 .solution_desc_item { width: 50%; padding: 0 15px; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-.solution_desc_item .inner_box { height: 100%; border: 1px solid #ddd; padding: 36px 40px; -webkit-box-sizing: border-box; box-sizing: border-box; position: relative; }
+.solution_desc_item .inner_box { height: 100%; border: 1px solid #ddd; padding: 36px 40px; -webkit-box-sizing: border-box; box-sizing: border-box; position: relative; background-color: #fff; }
 
 .solution_desc_item .inner_box::before { content: ''; position: absolute; width: 40px; height: 3px; background-color: #2f91e8; left: 40px; top: -1px; }
 
